--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,20 +60,21 @@ ${PROJECT_SOURCE_DIR}/Thirdparty/DBoW2/lib/libDBoW2.so
 ${PROJECT_SOURCE_DIR}/Thirdparty/g2o/lib/libg2o.so
 )
 
+MESSAGE("is this cmake")
 add_executable(mono_tum Examples/Monocular/mono_tum.cc)
 target_link_libraries(mono_tum ${PROJECT_NAME})
 
-add_executable(mono_kitti Examples/Monocular/mono_kitti.cc)
-target_link_libraries(mono_kitti ${PROJECT_NAME})
+# add_executable(mono_kitti Examples/Monocular/mono_kitti.cc)
+# target_link_libraries(mono_kitti ${PROJECT_NAME})
 
-add_executable(stereo_kitti Examples/Stereo/stereo_kitti.cpp)
-target_link_libraries(stereo_kitti ${PROJECT_NAME})
+# add_executable(stereo_kitti Examples/Stereo/stereo_kitti.cpp)
+# target_link_libraries(stereo_kitti ${PROJECT_NAME})
 
-add_executable(stereo_EuRoC Examples/Stereo/stereo_EuRoC.cpp)
-target_link_libraries(stereo_EuRoC ${PROJECT_NAME})
+# add_executable(stereo_EuRoC Examples/Stereo/stereo_EuRoC.cpp)
+# target_link_libraries(stereo_EuRoC ${PROJECT_NAME})
 
-add_executable(rgbd_tum Examples/RGB-D/rgbd_tum.cc)
-target_link_libraries(rgbd_tum ${PROJECT_NAME})
+# add_executable(rgbd_tum Examples/RGB-D/rgbd_tum.cc)
+# target_link_libraries(rgbd_tum ${PROJECT_NAME})
 
 # Build tools
 # set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Vocabulary)
